# URL-Shortener

./: README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
api/v1/: __init__.py
api/v1/routes/: ai_insight.py  analytics.py  auth.py  links.py
core/: config.py  database.py  security.py
core/utils/: hashid.py
core/validators/: __init__.py  password.py  username.py
migrations/: env.py
migrations/versions/: 2d15e341d6c7_fix_1.py  326c176ac803_.py  6472e6310596_update_url_to_httpurl.py  852f52b7b7f6_.py  9b29de19f6f6_change_email_field_in_user_model_to_.py  dc1eecb7036b_remove_slug_use_public_id.py  ee63a4ed7af2_.py
models/: base.py  link.py  user.py
schemas/: ai_insight.py  analytics.py  auth.py  link.py
services/: ai_insight.py  analytics_service.py  auth.py  auth_service.py  link.py  link_redirect.py  link_service.py
